# logu

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
example/: example.cpp  example_disable.cpp  example_fileoutput.cpp  example_outputhandler.cpp  example_severityfilter.cpp  example_tagfilter.cpp  example_tags.cpp
include/clog/: clog.hpp
include/logu/: logu.hpp
test/: CMakeLists.txt  test.cpp
